Orpie ChangeLog
------------------------------------------------------------------------

v1.4

   2004-08-29        Integrated unit handling code.  Real and complex 
                     scalars and matrices can are now dimensioned
                     quantities.  Unit conversion and base
                     standardization operators were added.

                     When entering external data, the integer base 
                     separator character was changed from '_' to '`'.

   2004-08-27        Raising a negative real number to a noninteger
                     power now produces a complex value rather than
                     real-valued 'nan'.

   2004-08-23        Deprecated "extended_" operation identifiers in
                     favor of somewhat more clear "abbrev_" 
                     identifiers.

                     Added methods to include (i.e. source) rcfiles
                     within each other, remove key bindings, and remove
                     operation abbreviations.

   2004-07-19        Implemented automatic key bindings.

                     Deprecated operation "function_rand" in favor of
                     "command_rand" because it does not take an 
                     argument.


v1.3

   2004-07-22        Ocaml 3.08 support: an include string is provided
                     to the compiler when building curses bindings.

                     Added a fix for a possible crash when drawing
                     help panel and using a custom minimalist
                     orpierc.

   2004-07-18        User variables are now evaluated before being
                     passed as arguments to var().

   2004-07-17        Version 1.3.0 release.

                     Added permutation function and random number
                     generator.

                     Implemented common single-variable statistics
                     functions, and an upper tail normal probability
                     function.
